# picoarc

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  picoarc
LICENSES/: CERN-OHL-W-2.0.txt  MIT.txt
firmware/: CMakeLists.txt
firmware/build-arm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cec_rx.pio.h  cec_tx.pio.h  cmake_install.cmake  picoarc.dis  picoarc.elf  picoarc.elf.map  picoarc.hex  picoarc.uf2
firmware/build-arm/pico-sdk/: cmake_install.cmake
firmware/build-arm/pico-sdk/docs/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_sync/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_time/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/common/pico_util/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2040/hardware_structs/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2040/pico_platform/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/boot_bootrom_headers/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_adc/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_boot_lock/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_clocks/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_divider/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_dma/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_exception/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_flash/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_gpio/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_i2c/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_interp/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_irq/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_pio/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_pll/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_pwm/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_resets/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_rtc/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_spi/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_sync/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_sync_spin_lock/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_ticks/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_timer/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_uart/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_vreg/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_watchdog/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_xip_cache/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/hardware_xosc/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/pico_aon_timer/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/pico_async_context/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/pico_atomic/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/pico_bit_ops/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/pico_bootrom/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/pico_btstack/: cmake_install.cmake
firmware/build-arm/pico-sdk/src/rp2_common/pico_clib_interface/: cmake_install.cmake
firmware/build-arm/pico-sdk/tools/: cmake_install.cmake
firmware/build-arm/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
firmware/scripts/: flash-monitor.sh  flash.sh
firmware/src/: arc.c  arc.h  audio_caps.h  cec.c  cec.h  cec_rx.pio  cec_tx.pio  ddc_edid.c  ddc_edid.h  main.c  picoarc_config.h  picoarc_log.c  picoarc_log.h  realtime.c  realtime.h  spdif.c  spdif.h  spdif.pio  tusb_config.h  usb_audio.c  usb_audio.h  usb_descriptors.c  usb_descriptors.h
(+115 files in other folders)
